Fixed the issue of elements overlapping in different browsers. Set height to max-content and that seemed to help fix most of the issues

--- a/scss/_explanationSection.scss
+++ b/scss/_explanationSection.scss
@@ -62,7 +62,8 @@
 @media only screen and (max-width: 600px) {
   .explanationContainer {
     background: $colorLightBackground;
-    height: 100vh;
+    height: max-content;
+    padding: 2em;
     flex-direction: column;
   }
   .explanationText {
