--- a/scss/_heroSection.scss
+++ b/scss/_heroSection.scss
@@ -44,7 +44,7 @@
 @media only screen and (max-width: 600px) {
   .heroSection {
     padding: 2em;
-    height: 70vh;
+    height: max-content;
   }
 
   .heroText {
